--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "app"
   ],
   "scripts": {
-    "build": "npm run lint",
-    "dev": "vite"
+    "build": "vite build",
+    "dev": "vite",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
@@ -31,6 +32,7 @@
     "@stylistic/eslint-plugin": "5.4.0",
     "@wdio/cli": "^7.16.13",
     "eslint": "9.36.0",
+    "eslint-plugin-cypress": "3.5.0",
     "eslint-plugin-mocha": "11.1.0",
     "globals": "16.4.0",
     "globby": "11.1.0",
